--- a/.gitmodules
+++ b/.gitmodules
@@ -1,2 +1,3 @@
 [submodule "inspire-app"]
-	url = https://github.com/Tristen297/inspire-app.git
+    path = inspire-app
+    url = <URL-to-your-submodule-repository>
