--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "inspire-app"]
     path = inspire-app
-    url = <URL-to-your-submodule-repository>
+    url = https://github.com/Tristen297/inspire-digital-fix.git
